--- a/solar_backend/templates/test.html
+++ b/solar_backend/templates/test.html
@@ -3,11 +3,7 @@
 <head>
     <meta charset="utf-8">
     <title>WTF Balkonkraftwerk</title>
-    <link href="https://cdn.jsdelivr.net/npm/daisyui@3.7.4/dist/full.css" rel="stylesheet" type="text/css" />
-    <script src="https://cdn.tailwindcss.com"></script>
-<style>
-    
-</style>
+    <link rel="stylesheet" href="/static/output.css" type="text/css" />
 </head>
 
 <body class="h-full">
